# screwball

./: .dockerignore  .gitignore  .mise.toml  .oxlintrc.json  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  dev.sh  fly.toml  package.json  playwright.config.js  start.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy.yml
assets/names/: ssa_2020_top500.txt
e2e/: regenerate.sh  screenshot.css  seed.mjs  serve.sh  snapshots.spec.js
e2e/fixture-data/games/: 13b7c864-5e32-4f40-b99e-b1b34171c832.json  1756fa1c-f0b0-48d0-8304-8a79c4230ef6.json  df0e9f62-2cee-4b2a-90b2-f8e500ef4258.json
e2e/fixture-data/users/: 1d92bc0a-ff6c-41b7-93da-4309788e3d18.json  a56b7dfc-6f33-4b51-bb28-4007834fdabf.json
public/: app.css  auth.js  game.js  manifest.webmanifest  notification-debug.js  settings.js  sw.js  touch-debug.js
src/: app.rs  auth.rs  bag.rs  board.rs  bot.rs  define.rs  dict.rs  error.rs  game.rs  lib.rs  main.rs  models.rs  push.rs  render.rs  routes.rs  session.rs  store.rs  users.rs  view.rs
tests/: bot.rs  dockerfile.rs  engine.rs  frontend_assets.rs  routes.rs
